[project]
  name = "UranMusc"
  version = "0.1.0"
  description = "Scripts for the running MUSC in the URANIE framework"
  readme = "README.md"
  requires-python = "<3.13,>=3.10"
  dependencies = [
    "click>=8.2.0",
    "loguru",
    "luigi>=3.6.0",
    "pydantic>=2.12.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
]

[dependency-groups]
  dev = [
    "pre-commit>=4.2.0",
    "black>23.10.0",
    "flake8>=4.0.1, <5.0.0",
    "flakeheaven<3.3.0",
    "isort>5.12.0",
    "ruff>0.1.0",
    "pydoclint>0.3.8",
    "setuptools>=80.9.0",    # needed by isort
    "ipdb",
  ]

[build-system]
  requires = ["pdm-backend"]
  build-backend = "pdm.backend"

  [project.scripts]
    uranmusc = "uranmusc.__main__:main"

[tool.black]
  line-length = 90
